# swagger_output.json
@@ -40,33 +40,27 @@
             "description": "portal_id",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "description": "Page in results.",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "description": "Per page results.",
+            "required": false,
+            "type": "string"
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/Member"
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
-          },
           "401": {
             "description": "Unauthorized"
-          },
-          "500": {
-            "description": "Internal Server Error"
           }
-        },
-        "security": [
-          {
-            "Bearer": []
-          }
-        ]
+        }
       },
       "post": {
         "tags": [
@@ -476,6 +470,52 @@
             "description": "OK",
             "schema": {
               "$ref": "#/definitions/Invoice"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      }
+    },
+    "/members/{member_id}/yahrzeits": {
+      "get": {
+        "tags": [
+          "Members",
+          "Yahrzeit"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "member_id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "Member Id"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Yahrzeit"
+              },
+              "xml": {
+                "name": "main"
+              }
             }
           },
           "401": {
@@ -977,7 +1017,15 @@
           "Yahrzeit"
         ],
         "description": "",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "portal_id",
+            "in": "header",
+            "description": "Portal Id",
+            "required": true,
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK",
@@ -2337,7 +2385,9 @@
         ]
       },
       "get": {
-        "tags": [],
+        "tags": [
+          "Honors"
+        ],
         "description": "",
         "parameters": [
           {
